// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopTopHeader: Component should render correctly 1`] = `
<styled.div>
  <styled.div>
    <Component
      buttonProps={
        Object {
          "id": "desktopTopHeaderOpenMenuButton",
          "onClick": [Function],
        }
      }
      customButtonStyles={
        Object {
          "flex": "0 0 auto",
          "position": null,
        }
      }
      customStyles={
        Object {
          "padding": null,
        }
      }
    >
      <styled.div>
        <Styled(Styled(Link))
          to="/"
        >
          <styled.schemaLogo.svg />
        </Styled(Styled(Link))>
        <styled.div>
          <Component
            customStyles={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": null,
                "display": "flex",
                "height": "calc(100% - 20px)",
                "margin": "6px 0 10px 10px",
                "padding": "0 7px",
              }
            }
            onClick={[Function]}
          >
            <Component />
          </Component>
          <Styled(Styled(Link))
            to="/settings"
          >
            <Component />
          </Styled(Styled(Link))>
        </styled.div>
      </styled.div>
    </Component>
    <styled.div
      onClick={[Function]}
    />
    <styled.div
      onClick={[Function]}
    >
      <Component
        closeButtonProps={
          Object {
            "customStyles": Object {
              "backgroundColor": "transparent",
              "right": 44,
              "top": 44,
            },
            "id": "desktopTopHeaderCloseMenuButton",
          }
        }
        customStyles={
          Object {
            "maxWidth": 595,
            "minHeight": null,
            "padding": 50,
            "position": "absolute",
            "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
            "zIndex": 9999,
          }
        }
        onClose={[Function]}
      >
        <styled.div>
          <Styled(Styled(Link))
            to="/"
          >
            <styled.schemaLogo.svg />
          </Styled(Styled(Link))>
        </styled.div>
        <styled.div
          onClick={[Function]}
        >
          <Styled(styled.ul)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="0"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/project"
              >
                <FormattedMessage
                  defaultMessage="Projects"
                  id="shared.components.desktopTopHeader.projects"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
            <Styled(styled.li)
              active={false}
              hide={true}
              key="1"
            >
              <Link
                id="userBtn"
                onClick={[Function]}
                to="/user"
              >
                <FormattedMessage
                  defaultMessage="Users"
                  id="shared.components.desktopTopHeader.users"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
          </Styled(styled.ul)>
          <Styled(styled.ul)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="0"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="About Schema CMS"
                  id="shared.components.desktopTopHeader.about"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="1"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="API Doc"
                  id="shared.components.desktopTopHeader.api"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="2"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="GitHub Repository"
                  id="shared.components.desktopTopHeader.repository"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
          </Styled(styled.ul)>
        </styled.div>
      </Component>
    </styled.div>
  </styled.div>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;

exports[`DesktopTopHeader: Component should render correctly when no user 1`] = `
<styled.div>
  <styled.div>
    <Styled(Styled(Link))
      to="/"
    >
      <styled.schemaLogo.svg />
    </Styled(Styled(Link))>
    <styled.div
      onClick={[Function]}
    />
    <styled.div
      onClick={[Function]}
    >
      <Component
        closeButtonProps={
          Object {
            "customStyles": Object {
              "backgroundColor": "transparent",
              "right": 44,
              "top": 44,
            },
            "id": "desktopTopHeaderCloseMenuButton",
          }
        }
        customStyles={
          Object {
            "maxWidth": 595,
            "minHeight": null,
            "padding": 50,
            "position": "absolute",
            "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
            "zIndex": 9999,
          }
        }
        onClose={[Function]}
      >
        <styled.div>
          <Styled(Styled(Link))
            to="/"
          >
            <styled.schemaLogo.svg />
          </Styled(Styled(Link))>
        </styled.div>
        <styled.div
          onClick={[Function]}
        >
          <Styled(styled.ul)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="0"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="About Schema CMS"
                  id="shared.components.desktopTopHeader.about"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="1"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="API Doc"
                  id="shared.components.desktopTopHeader.api"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
            <Styled(styled.li)
              active={false}
              hide={false}
              key="2"
            >
              <Link
                id={null}
                onClick={[Function]}
                to="/"
              >
                <FormattedMessage
                  defaultMessage="GitHub Repository"
                  id="shared.components.desktopTopHeader.repository"
                  values={Object {}}
                />
              </Link>
            </Styled(styled.li)>
          </Styled(styled.ul)>
        </styled.div>
      </Component>
    </styled.div>
  </styled.div>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;
